# QualifAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/EvaluationFiles/: 2020_race_analysis.ipynb  Effect_of_filtering.ipynb  cutoff_time_histograms.ipynb  plot_race_info.ipynb  std_histograms.ipynb  time_decrease_as_laps_increase.ipynb
src/ModelUsage/: __init__.py  get_trained_model.py  model_helper_functions.py  predict_cutoff.py  remain_in_garage.py  train_hyperparameters.py
src/jupyter_notebook/: evaluation.ipynb  extension.ipynb  hyperparameters.ipynb  time_increase_no_numpy.ipynb
src/utils/: __init__.py  convert_timespan.py  generate_one_hot.py
tests/DataExtractionProcess/: test_generate_useful_CSV.py  test_get_tyre_info.py  test_order_laps_set.py
tests/ModelUsage/: test_get_trained_model.py  test_model_helper_functions.py
